[gd_scene load_steps=8 format=3 uid="uid://djrq8u6ebelqj"]

[ext_resource type="Texture2D" uid="uid://7amp12db18os" path="res://inventory/buildMenu/TowerPlacementAssets/TowerFrame.png" id="1_rikf5"]
[ext_resource type="Script" path="res://inventory/item_update.gd" id="2_dgf6e"]
[ext_resource type="FontFile" uid="uid://c32arsggg4kna" path="res://startscreen/Nihonium113.ttf" id="2_dkel7"]
[ext_resource type="Texture2D" uid="uid://bw6yisyqpenl1" path="res://gameplayReferences/resourceIcons/wood.png" id="3_blnh8"]

[sub_resource type="Animation" id="Animation_gtfp2"]
resource_name = "FadeAway"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qctc8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_odlxe"]
_data = {
"FadeAway": SubResource("Animation_gtfp2"),
"RESET": SubResource("Animation_qctc8")
}

[node name="ItemUpdate" type="TextureRect"]
texture_filter = 1
texture = ExtResource("1_rikf5")
expand_mode = 5
stretch_mode = 4
script = ExtResource("2_dgf6e")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.092
anchor_right = 0.92
anchor_bottom = 0.81
offset_left = 0.32
offset_top = -0.42221
offset_right = 0.679993
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dkel7")
theme_override_font_sizes/font_size = 36
text = "+1 pizza"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_blnh8")
expand_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_odlxe")
}

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
